--- a/adidas-project/src/Components/Navbar.css
+++ b/adidas-project/src/Components/Navbar.css
@@ -97,7 +97,8 @@
     justify-content: space-between;
     width: 170px;
     height: 25px;
-    background-color: #ECEFF1;
+    background-color: white;
+    border: 1px solid black;
     margin-top: 10px;
 }
 .navbar7 > div:nth-child(1) {
@@ -107,14 +108,16 @@
     border: none;
     outline: none;
     margin-left: 5px;
+    margin-top: -20px;
     width: 140px;
+    height: 20px;
 }
 .navbar7 > div:nth-child(1) > ::placeholder {
-    background-color: #ECEFF1;
+    background-color: white;
     font-size: 14px;
     font-weight: lighter;
 }
 .navbar7 > div:nth-child(2) > i {
     margin-top: 3px;
-    margin-right: 20px;
+    margin-right: 30px;
 }
