--- a/adidas-project/src/Components/Register.css
+++ b/adidas-project/src/Components/Register.css
@@ -4,7 +4,7 @@
 .register1 {
     width: 30%;
     margin: auto;
-    height: 820px;
+    height: 730px;
     border: 1px solid black;
     margin-top: 30px;
     margin-bottom: 30px;
@@ -107,6 +107,24 @@ input {
     border: none;
     outline: none;
     text-align: center;
+    margin-left: 50px;
+}
+.value2{
+    width: 80px;
+    height: 30px;
+    background-color: blue;
+    color: white;
+    border: none;
+    outline: none;
+    text-align: center;
+}
+.value3 {
+    display: flex;
+    justify-content: space-around;
+}
+.value3 > p {
+    font-size: 10px;
+    margin-top: 10px;
 }
 /* .login-right > button > p {
     margin-left: 30px;
