--- a/adidas-project/src/Components/Navbar/Navbar.css
+++ b/adidas-project/src/Components/Navbar/Navbar.css
@@ -69,8 +69,14 @@
     text-decoration-line: none;
     color: gray;
 }
-.navbar5 > p:nth-child(4) {
+/* .navbar5 > p:nth-child(4) {
     font-size: 6px;
+} */
+.navbar5 > button {
+    width: 60px;
+    height: 20px;
+    font-size: 8px;
+    text-align: center;
 }
 .navbar6 {
     display: flex;
@@ -129,6 +135,8 @@
 }
 .state > h1 {
     font-size: 18px;
-    margin-top: 15px;
+    margin-top: 7px;
     padding-left: 40px;
+    text-decoration-line: underline;
+    color: blue;
 }
