--- a/adidas-project/src/Components/AllProducts/AllProducts.css
+++ b/adidas-project/src/Components/AllProducts/AllProducts.css
@@ -6,10 +6,11 @@
 }
 .all2{
     width: 22%;
-    height: 340px;
+    height: 240px;
     margin-bottom: 20px;
     border: 1px solid black;
     border-radius: 20px;
+    padding: 5px;
 }
 .all3{
     width: 100%;
@@ -20,7 +21,7 @@
     text-align: center;
     font-size: 15px;
     font-weight: 500;
-    margin-top: 5px;
+    padding-top: 15px;
 }
 .all5{
     text-align: center;
